--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -4,31 +4,31 @@
 name: Maven Package
 
 on:
-  release:
-    types: [created]
-
+  push:
+    branches: [ main ]
+env:
+  ARTIFACT_NAME: csye6225-webapp-serverless.zip
+  AWS_REGION: us-east-2
+  APPLICATION_NAME: deployapp
+  APPLICATION_DEPLOY_GROUP: deployGroup
+  AWS_ACCESS_KEY_ID: 1
+  AWS_SECRET_ACCESS_KEY: 1
 jobs:
-  build:
-
+  lambda-deploy:
     runs-on: ubuntu-latest
-    permissions:
-      contents: read
-      packages: write
-
     steps:
-    - uses: actions/checkout@v3
-    - name: Set up JDK 11
-      uses: actions/setup-java@v3
-      with:
-        java-version: '11'
-        distribution: 'temurin'
-        server-id: github # Value of the distributionManagement/repository/id field of the pom.xml
-        settings-path: ${{ github.workspace }} # location for the settings.xml file
+      - name: Checkout
+        uses: actions/checkout@v2
 
-    - name: Build with Maven
-      run: mvn -B package --file pom.xml
-
-    - name: Publish to GitHub Packages Apache Maven
-      run: mvn deploy -s $GITHUB_WORKSPACE/settings.xml
-      env:
-        GITHUB_TOKEN: ${{ github.token }}
+      - name: Build lambda Artifact
+        run: |
+            zip -r ${{env.ARTIFACT_NAME}} lambda_function.py
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: {key}
+          aws-secret-access-key: {secre-key}
+          aws-region: ${{ env.AWS_REGION }}
+      - name: update lambda function
+        run: |
+          aws lambda update-function-code --function-name serverless --zip-file fileb://${{env.ARTIFACT_NAME}}
