--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -42,4 +42,4 @@ jobs:
 
       - name: update lambda function
         run: |
-          aws lambda update-function-code --function-name vemailFunction --s3-bucket handlerbucket --s3-key demo-1.0-SNAPSHOT.jar
+          aws lambda update-function-code --function-name verifyFunction --s3-bucket handlerbucket --s3-key demo-1.0-SNAPSHOT.jar
